@@ -71,6 +71,7 @@ Ver.5.6 (in development)
 - [BUG FIX] In same case, the LIMIT parameter of non paging context set to the pagination length.
 - [BUG FIX] Target specifications using local context show the error message, but that's wrong messages.
 - [BUG FIX] Custom themes path had bug fix.
+- [BUG FIX] In case of file uploading, $_SERVER doesn't have 'HTTP_CONTENT_LENGTH' key in any case.
 - [SECURITY FIX] The resetpassword.php in Auth_Support/PasswordReset folder had security issues.
   If you use the resetpassword.php file in your solution. we'd like to replace the fixed version.
 - [FYI] The file Samples/sample_memo_html5.html is removed. It wasn't working in long time.
